# STM32_BSP

CMSIS-NN-CM4/USER/: Packs_USART.htm  USART.uvguix.Asahi  USART.uvoptx  USART.uvprojx  main.c
CMSIS-NN-CM4/USER/RTE/_USART/: RTE_Components.h
FreeRTOS/BSP/DEBUG/: bsp_debug.c
FreeRTOS/BSP/Key/: bsp_key.h
FreeRTOS/BSP/dht11/: bsp_dht11.c  bsp_dht11.h
FreeRTOS/FreeRTOS/: CMakeLists.txt
FreeRTOS/FreeRTOS/BSP/color_led/: bsp_color_led.h
FreeRTOS/FreeRTOS/BSP/delay/: bsp_delay.h
FreeRTOS/FreeRTOS/Project/: BH-F103.uvguix.Asahi  BH-F103.uvprojx
FreeRTOS/FreeRTOS/Project/Objects/: core_delay.d  main.crf  queue.crf  stm32f10x_dma.crf  stm32f10x_it.crf  tasks.crf
FreeRTOS/FreeRTOS/User/: main.c  stm32f10x_it.c
FreeRTOS/FreeRTOS_error/BSP/DEBUG/: bsp_debug.h
FreeRTOS/FreeRTOS_error/BSP/GPIO/: bsp_gpio.h
FreeRTOS/FreeRTOS_error/BSP/color_led/: bsp_color_led.c
FreeRTOS/FreeRTOS_error/BSP/delay/: bsp_delay.c
FreeRTOS/FreeRTOS_error/Doc/: readme.txt
FreeRTOS/FreeRTOS_error/Project/Objects/: bsp_adc.crf  bsp_adc.d  bsp_color_led.crf  bsp_gpio.d  bsp_key.crf  bsp_key.d  bsp_systick.crf  bsp_systick.d  bsp_uart.crf  bsp_uart.d  core_delay.crf  croutine.d  event_groups.crf  port.crf  queue.d  stm32f10x_adc.crf  stm32f10x_dac.crf  stm32f10x_fsmc.crf  stm32f10x_it.crf  stm32f10x_pwr.crf  stm32f10x_spi.crf  tasks.d  timers.d
FreeRTOS/FreeRTOS_error/User/: FreeRTOSConfig.h
FreeRTOS/Project/: BH-F103.uvguix.Asahi  BH-F103.uvoptx  BH-F103.uvprojx
FreeRTOS/Project/Listings/: BH-F103.map
FreeRTOS/Project/Objects/: BH-F103.axf  BH-F103.build_log.htm  BH-F103.hex  BH-F103.htm  BH-F103.lnp  BH-F103_Target 1.dep  bsp_debug.crf  bsp_debug.d  bsp_delay.crf  bsp_dht11.crf  bsp_dht11.d  bsp_key.crf  core_cm3.crf  core_delay.crf  core_delay.d  croutine.crf  event_groups.crf  event_groups.d  heap_4.crf  heap_4.d  list.crf  list.d  main.crf  main.d  misc.crf  port.crf  port.d  queue.crf  queue.d  stm32f10x_adc.crf  stm32f10x_bkp.crf  stm32f10x_can.crf  stm32f10x_cec.crf  stm32f10x_crc.crf  stm32f10x_dac.crf  stm32f10x_dbgmcu.crf  stm32f10x_dma.crf  stm32f10x_exti.crf  stm32f10x_flash.crf  stm32f10x_fsmc.crf  (+17 more)
FreeRTOS/User/: FreeRTOSConfig.h  main.c  stm32f10x_it.c
FreeRTOS/clion_fw/: CMakeLists.txt  armcc-toolchain.cmake
FreeRTOS/clion_fw/Libraries/CMSIS/startup/: startup_stm32f10x_hd.s
FreeRTOS/clion_fw/Project/: BH-F103.uvguix.Asahi  BH-F103.uvoptx
FreeRTOS/clion_fw/Project/Listings/: BH-F103.map
FreeRTOS/clion_fw/Project/Objects/: BH-F103.axf  BH-F103.build_log.htm  BH-F103.hex  BH-F103.htm  BH-F103_Target 1.dep  bsp_color_led.d  bsp_delay.crf  bsp_dht11.crf  bsp_usart.crf  bsp_usart.d  croutine.crf  croutine.d  event_groups.d  heap_4.crf  list.crf  list.d  main.d  port.d  stm32f10x_can.crf  stm32f10x_gpio.crf  stm32f10x_sdio.crf  tasks.d
FreeRTOS/clion_fw/User/: stm32f10x_it.c
Template/BSP/DEBUG/: bsp_debug.c  bsp_debug.h
Template/BSP/GPIO/: bsp_gpio.c
Template/BSP/Key/: bsp_key.c  bsp_key.h
Template/BSP/Systick/: bsp_SysTick.c
Template/BSP/USART/: bsp_usart.h
Template/BSP/delay/: bsp_delay.c  bsp_delay.h
Template/Project/: BH-F103.uvguix.Asahi  BH-F103.uvoptx  BH-F103.uvprojx
Template/Project/Listings/: BH-F103.map
Template/Project/Objects/: BH-F103.axf  BH-F103.build_log.htm  BH-F103.hex  BH-F103.htm  BH-F103.lnp  BH-F103_Target 1.dep  bsp_debug.crf  bsp_delay.crf  bsp_delay.d  bsp_key.crf  bsp_systick.crf  bsp_usart.crf  main.crf  main.d  misc.crf  stm32f10x_adc.crf  stm32f10x_bkp.crf  stm32f10x_can.crf  stm32f10x_cec.crf  stm32f10x_crc.crf  stm32f10x_dac.crf  stm32f10x_dbgmcu.crf  stm32f10x_dma.crf  stm32f10x_exti.crf  stm32f10x_flash.crf  stm32f10x_fsmc.crf  stm32f10x_gpio.crf  stm32f10x_i2c.crf  stm32f10x_it.crf  stm32f10x_it.d  stm32f10x_iwdg.crf  stm32f10x_pwr.crf  stm32f10x_rcc.crf  stm32f10x_rtc.crf  stm32f10x_sdio.crf  stm32f10x_spi.crf  stm32f10x_tim.crf  stm32f10x_usart.crf  stm32f10x_wwdg.crf  system_stm32f10x.crf
Template/User/: main.c  stm32f10x_it.c
clion/ARMCC/clion_fw/: CMakeLists.txt  STM32F103VETX_FLASH.ld
clion/ARMCC/clion_fw/BSP/DEBUG/: bsp_debug.h
clion/ARMCC/clion_fw/BSP/GPIO/: bsp_gpio.c
clion/ARMCC/clion_fw/BSP/USART/: bsp_usart.c
clion/ARMCC/clion_fw/BSP/delay/: bsp_delay.c
clion/ARMCC/clion_fw/Libraries/CMSIS/startup/: startup_stm32f10x_hd.s
clion/ARMCC/clion_fw/Project/: BH-F103.uvguix.Asahi
clion/ARMCC/clion_fw/Project/Listings/: BH-F103.map  startup_stm32f10x_hd.lst
clion/ARMCC/clion_fw/Project/Objects/: BH-F103.axf  BH-F103.build_log.htm  BH-F103.hex  BH-F103.htm  BH-F103_Target 1.dep  bsp_debug.d  bsp_gpio.crf  bsp_usart.crf  main.crf  main.d  misc.crf  stm32f10x_it.crf  stm32f10x_it.d  stm32f10x_rcc.crf
clion/ARMCC/clion_fw/User/: main.c
clion/GCC/clion_fw/: CMakeLists.txt
clion/GCC/clion_fw/BSP/delay/: bsp_delay.c
clion/GCC/clion_hal/: .cproject  .mxproject  .project  CMakeLists.txt
clion/GCC/clion_hal/Core/Inc/: main.h
clion/GCC/clion_hal/Core/Src/: gpio.c  main.c
clion/GCC/clion_hal/Debug/: HAL_DEMO.elf  HAL_DEMO.map  makefile  objects.list
clion/GCC/clion_hal/Debug/Core/Src/: gpio.su  main.cyclo
clion/GCC/clion_hal/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_dma.cyclo  stm32f1xx_hal_rcc_ex.cyclo
clion/clion_fw/BSP/DEBUG/: bsp_debug.c
clion/clion_fw/BSP/USART/: bsp_usart.c
clion/clion_hal/: clion_hal.ioc
clion/clion_hal/Debug/Core/Src/: subdir.mk
clion/clion_hal/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_gpio.cyclo  subdir.mk
clion/clion_hal/config/: stlink.cfg
clion/cmakelists/: 原因.txt
clion模板/clion_fw/BSP/Key/: bsp_key.c
clion模板/clion_hal/Debug/: HAL_DEMO.list
clion模板/clion_hal/Debug/Core/Src/: main.su
clion模板/clion_hal/Debug/Core/Startup/: subdir.mk
clion模板/cmakelists/: CMakeLists.txt  网上下载可用.txt  网上下载，和cubemx相似可用.txt
